--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -70,19 +70,9 @@ if(NOT WIN32)
     #include(../cmake/lib/benchmark.cmake)
     #include(../cmake/lib/openmp.cmake)
     #include(../cmake/lib/raygui.cmake)
-    add_subdirectory(../external/googletest external/googletest)
-    set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
-    set(BENCHMARK_ENABLE_TESTING OFF)
-    set(BENCHMARK_ENABLE_WERROR OFF CACHE BOOL "" FORCE)
-    set(BENCHMARK_FORCE_WERROR OFF CACHE BOOL "" FORCE)
-    set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
-    set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "" FORCE)
-    set(BENCHMARK_CXX_LINKER_FLAGS "" CACHE STRING "" FORCE)
-    set(BENCHMARK_CXX_LIBRARIES "" CACHE STRING "" FORCE)
-    set(BENCHMARK_CXX_FLAGS "" CACHE STRING "" FORCE)
-    set(CMAKE_CXX_FLAGS_COVERAGE "" CACHE STRING "" FORCE)
-    set(CMAKE_REQUIRED_FLAGS "" CACHE STRING "" FORCE)
-    add_subdirectory(../external/benchmark external/benchmark)
+    find_package(OpenMP)
+    find_package(GTest REQUIRED)
+    find_package(benchmark REQUIRED)
 
     #include(../cmake/lib/raylib.cmake)
     #include(../cmake/lib/fast_noise2.cmake)
@@ -93,7 +83,6 @@ if(NOT WIN32)
     include_directories(source)
 
     #test_bench_generator(benlib_bench false false)
-
 
     test_bench_generator(getSchwarzschild_test true true)
     test_bench_generator(getGravitationalAttraction_test true true)
