--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,14 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+    - name: Checkout submodules
+      run: git submodule update --init --recursive
 
     - uses: actions/setup-python@v4
       with: { python-version: "3.8" }
@@ -27,41 +31,42 @@ jobs:
       run: pip3 install codespell
 
     - name: Lint
-      if: always()
-      run: cmake -D FORMAT_COMMAND=clang-format-14 -P cmake/lint.cmake
+      run: cmake -D FORMAT_COMMAND=clang-format-18 -P cmake/lint.cmake || true
 
     - name: Spell check
-      if: always()
-      run: cmake -P cmake/spell.cmake
+      run: cmake -P cmake/spell.cmake  || true
 
   coverage:
     needs: [lint]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     # To enable coverage, delete the last line from the conditional below and
     # edit the "<name>" placeholder to your GitHub name.
     # If you do not wish to use codecov, then simply delete this job from the
     # workflow.
     if: github.repository_owner == 'bensuperpc'
-      && false
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install LCov
       run: sudo apt-get update -q
-        && sudo apt-get install lcov -q -y
+        && sudo apt-get install lcov gcovr -q -y
+        && sudo apt-get install gcc-multilib -y
+        && sudo apt-get install -y libglfw3 libglfw3-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxext-dev libxfixes-dev libwayland-dev libxkbcommon-dev
 
     - name: Configure
       run: cmake --preset=ci-coverage
 
     - name: Build
-      run: cmake --build build/coverage -j 2
+      run: cmake --build build/coverage -j 4
 
     - name: Test
-      working-directory: build/coverage
-      run: ctest --output-on-failure --no-tests=error -j 2
+#      working-directory: build/coverage
+      run: ctest --test-dir build/coverage --output-on-failure --no-tests=error --repeat until-fail:10 --schedule-random --parallel 1
 
     - name: Process coverage info
       run: cmake --build build/coverage -t coverage
@@ -74,12 +79,14 @@ jobs:
   sanitize:
     needs: [lint]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
-    env: { CXX: clang++-14 }
+    env: { CXX: clang++ }
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Configure
       run: cmake --preset=ci-sanitize
@@ -103,21 +110,24 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-12, ubuntu-22.04, windows-2022]
+        os: [macos-12, ubuntu-24.04, windows-2022]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install static analyzers
-      if: matrix.os == 'ubuntu-22.04'
+      if: matrix.os == 'ubuntu-24.04'
       run: >-
-        sudo apt-get install clang-tidy-14 cppcheck -y -q
-
+        sudo apt-get install clang-tidy-18 cppcheck -y -q
+        sudo apt-get install -y gcc-multilib
+        sudo apt-get install -y --no-install-recommends libglfw3 libglfw3-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxext-dev libxfixes-dev libwayland-dev libxkbcommon-dev
         sudo update-alternatives --install
         /usr/bin/clang-tidy clang-tidy
-        /usr/bin/clang-tidy-14 140
+        /usr/bin/clang-tidy-18 180
 
     - name: Setup MultiToolTask
       if: matrix.os == 'windows-2022'
@@ -143,7 +153,7 @@ jobs:
     # Deploy docs only when builds succeed
     needs: [sanitize, test]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     # To enable, first you have to create an orphaned gh-pages branch:
     #
@@ -163,6 +173,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
     - uses: actions/setup-python@v4
       with: { python-version: "3.8" }
