--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,10 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Install LCov
+    - name: Install coverage tools
       run: sudo apt-get update -q
         && sudo apt-get install lcov gcovr -q -y
-        && sudo apt-get install gcc-multilib -y
+        && sudo apt-get install gcc-multilib libgtest-dev libbenchmark-dev -y
         && sudo apt-get install -y libglfw3 libglfw3-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxext-dev libxfixes-dev libwayland-dev libxkbcommon-dev
 
     - name: Configure
@@ -87,6 +87,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
+
+    - name: Install dependencies
+      run: sudo apt-get update -q
+        && sudo apt-get install gcc-multilib libgtest-dev libbenchmark-dev -y
+        && sudo apt-get install -y libglfw3 libglfw3-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxext-dev libxfixes-dev libwayland-dev libxkbcommon-dev
 
     - name: Configure
       run: cmake --preset=ci-sanitize
@@ -123,7 +128,7 @@ jobs:
       if: matrix.os == 'ubuntu-24.04'
       run: >-
         sudo apt-get install clang-tidy-18 cppcheck -y -q
-        sudo apt-get install -y gcc-multilib
+        sudo apt-get install -y gcc-multilib libgtest-dev libbenchmark-dev
         sudo apt-get install -y --no-install-recommends libglfw3 libglfw3-dev libx11-dev libxcursor-dev libxrandr-dev libxinerama-dev libxi-dev libxext-dev libxfixes-dev libwayland-dev libxkbcommon-dev
         sudo update-alternatives --install
         /usr/bin/clang-tidy clang-tidy
