--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,14 +9,17 @@
     "vscode": {
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
-        "C_Cpp.clang_format_style": "Google",
-        "extensions": [
-          "ms-vscode.cpptools",
-          "ms-vscode.cpptools-extension-pack",
-          "ms-vscode.cmake-tools",
-          "redhat.vscode-yaml"
-        ]
-      }
+        "C_Cpp.clang_format_style": "Google"
+      },
+      "extensions": [
+        "ms-vscode.cpptools",
+        "ms-vscode.cpptools-extension-pack",
+        "redhat.vscode-yaml",
+        "ms-vscode.cmake-tools",
+        "waderyan.gitblame",
+        "ms-vscode.makefile-tools",
+        "yzhang.markdown-all-in-one"
+      ]
     }
   },
   "remoteUser": "dev"
