--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -34,5 +34,6 @@ add_example(bench_example)
 add_example(task_exemple)
 add_example(raylib_test)
 add_example(basic_async)
+add_example(beacons)
 
 add_folders(Example)
